--- a/style.css
+++ b/style.css
@@ -1,109 +1,65 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Courier New", Courier, monospace;
-  }
-  body {
-    display: flex;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-    background-color: #202020;
-  }
-  .container {
-    position: relative;
-    min-width: 300px;
-    min-height: 400px;
-    padding: 40px 30px 30px;
-    border-radius: 20px;
-    box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.25),
-      10px 10px 70px rgba(0, 0, 0, 0.25), inset -5px -5px 15px rgba(0, 0, 0, 0.25),
-      inset 5px 5px 15px rgba(0, 0, 0, 0.25);
-  }
-  .container span {
-    color: #fff;
-    position: relative;
-    display: grid;
-    width: 80px;
-    place-items: center;
-    margin: 8px;
-    height: 80px;
-    background: linear-gradient(180deg, #2f2f2f, #3f3f3f);
-    box-shadow: inset -8px 0 8px rgba(0, 0, 0, 0.15),
-      inset 0 -8px 8px rgba(0, 0, 0, 0.25), 0 0 0 2px rgba(0, 0, 0, 0.75),
-      10px 20px 25px rgba(0, 0, 0, 0.4);
-    user-select: none;
-    cursor: pointer;
-    font-weight: 400;
-    border-radius: 10px;
-  }
-  .calculator span:active {
-    filter: brightness(1.5);
-  }
-  .calculator span::before {
-    content: "";
-    position: absolute;
-    top: 3px;
-    left: 4px;
-    bottom: 14px;
-    right: 12px;
-    border-radius: 10px;
-    background: linear-gradient(90deg, #2d2d2d, #4d4d4d);
-    box-shadow: -5px -5px 15px rgba(0, 0, 0, 0.1),
-      10px 5px 10px rgba(0, 0, 0, 0.15);
-    border-left: 1px solid #0004;
-    border-bottom: 1px solid #0004;
-    border-top: 1px solid #0009;
-  }
-  .calculator span i {
-    position: relative;
-    font-style: normal;
-    font-size: 1.5em;
-    text-transform: uppercase;
-  }
-  .calculator {
-    position: relative;
-    display: grid;
-  }
-  .calculator .value {
-    position: relative;
-    grid-column: span 4;
-    height: 100px;
-    width: calc(100% - 20px);
-    left: 10px;
-    border: none;
-    outline: none;
-    background-color: #a7af7c;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.75);
-    text-align: right;
-    padding: 10px;
-    font-size: 2em;
-  }
-  .calculator .clear {
-    grid-column: span 2;
-    width: 180px;
-    background: #f00;
-  }
-  .calculator .clear::before {
-    background: linear-gradient(90deg, #d20000, #ffffff5c);
-    border-left: 1px solid #fff4;
-    border-bottom: 1px solid #fff4;
-    border-top: 1px solid #fff4;
-  }
-  .calculator .plus {
-    grid-row: span 2;
-    height: 180px;
-  }
-  .calculator .equal {
-    background: #2196f3;
-  }
-  .calculator .equal::before {
-    background: linear-gradient(90deg, #1479c9, #ffffff5c);
-    border-left: 1px solid #fff4;
-    border-bottom: 1px solid #fff4;
-    border-top: 1px solid #fff4;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family:  "Courier New", Courier, monospace;
+}
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #202020;
+}
+.calculator {
+  border: 1px solid #717377;
+  padding: 20px;
+  border-radius: 16px;
+  background: transparent;
+  box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.5zs);
+}
+input {
+  width: 350px;
+  border: none;
+  padding: 24px;
+  margin: 10px;
+  background:  #a7af7c;
+  box-shadow: 0px 3px 15px rgba(84, 84, 84, 0.1);
+  font-size: 40px;
+  text-align: right;
+  cursor: pointer;
+}
+input::placeholder {
+  color: #ffffff;
+}
+button {
+  position: relative;
+  border: none;
+  width: 60px;
+  height: 60px;
+  margin: 10px;
+  border-radius: 10px;
+  font-weight: 400px;
+  font-size: 1.5em;
+  color: #ffffff;
+  cursor: pointer;
+  background: linear-gradient(90deg, #2d2d2d, #4d4d4d);
+  box-shadow: -5px -5px 15px rgba(0, 0, 0, 0.1),
+  10px 5px 10px rgba(0, 0, 0, 0.15);
+
+}
+#clear {
+  width: 150px;
+  background:#f00 ;
+}
+#equal {
+  background: #2196f3;
+}
+#plus {
+  position: absolute;;
+  height: 120px; 
+  width: 60px; 
+  margin: 20px;
+}
+
